style mobile overflow fixed

--- a/src/components/MovieComponent/styled.css
+++ b/src/components/MovieComponent/styled.css
@@ -3,13 +3,14 @@
   width: 150px;
   height: 150px;
   margin: 25px;
-  margin-top: 50px;
+  margin-top: 60px;
   cursor: pointer;
   color: #f5f5f5de;
 }
 
 .movie-component span {
   display: block;
+  height: 50px;
   text-align: center;
 }
 
@@ -20,6 +21,7 @@
 .movie-component img {
   width: 150px;
   height: 150px;
+  object-fit: cover;
 }
 .movie-hover {
   background-color: yellow;
@@ -69,6 +71,7 @@
   width: 30%;
   margin: 5%;
   height: 200px;
+  object-fit: cover;
 }
 
 .stars {
