--- a/src/components/Stars/style.css
+++ b/src/components/Stars/style.css
@@ -23,3 +23,15 @@
   display: block;
   z-index: 0;
 }
+
+@media screen and (max-width: 500px) {
+  .star-ratings-css {
+    font-size: 20px;
+    height: 15px;
+    width: auto;
+    margin: 0 auto;
+    position: relative;
+    padding: 0;
+    text-shadow: 0px 1px 0 #a2a2a2;
+  }
+}
